# lemca_excavator

./: CMakeLists.txt  README.md
gps_samples/: 2006-09-23T14_41_44_90-TEST2_debug.ubx  ferme_warmo.ubx  gps_20200607_1817.ubx  gps_travail_3m.ubx
src/: auto_path.cpp  auto_path.hpp  environnement.hpp.in  framework.cpp  framework.hpp  job_module.cpp  job_module.hpp  main.cpp
src/balise/: balises.cpp  balises.hpp
src/config/: config.cpp  config.hpp  enum.hpp  langage.cpp  langage.hpp
src/gps/: custom_cap_nbr.hpp  ekf_module.hpp  imu_module.cpp  imu_module.hpp  nmea_parser.cpp  nmea_parser.hpp  position_module.cpp  position_module.hpp  projection_module.hpp  projection_utm.cpp  tracteur.hpp
src/gui/: debug_widget.cpp  debug_widget.hpp  diag_widget.cpp  diag_widget.hpp  first_widget.cpp  first_widget.hpp  gps_widget.cpp  gps_widget.hpp  option_widget.cpp  option_widget.hpp  param_translateur_widget.cpp  param_translateur_widget.hpp  rapide_option_widget.cpp  rapide_option_widget.hpp
src/gui/base/: base_widget.cpp  base_widget.hpp  component.hpp  keyboard_widget.cpp  keyboard_widget.hpp
src/gui/qt/: main_window.cpp  main_window.hpp  my_qt_file.cpp  my_qt_file.hpp  my_qt_media_player.cpp  my_qt_network.cpp  my_qt_network.hpp  my_qt_serial_port.cpp  my_qt_serial_port.hpp  my_qt_timer.cpp  my_qt_timer.hpp  qt_compteur_heure.cpp
src/gui/translator/: translator_widget.cpp  translator_widget.hpp
src/job/: job_manager.cpp  job_manager.hpp
src/licensemodule/: licensemodule.cpp  licensemodule.hpp
src/parcelle/: synchro.cpp  synchro.hpp
src/parcours/: curveAB.cpp  curveAB.hpp  l_curve.cpp  l_curve.hpp  l_line.cpp  l_line.hpp  l_line_curve.hpp  lineAB.cpp  lineAB.hpp  parcours.cpp  parcours.hpp
src/parser/: hexa_parser.cpp
src/pilot_module/: pilot_translator_module.cpp  pilot_translator_module.hpp
src/util/: directory_manager.cpp  directory_manager.hpp  log.cpp  log.hpp  mytime.cpp  mytime.hpp  parser.cpp  parser.hpp  stat.hpp
tools/: test.py
